--- a/byui.html
+++ b/byui.html
@@ -9,7 +9,7 @@
 <body>
     <header> 
         <nav> 
-            <a href="byui.html"> Home</a>
+            <a id="active" href="byui.html"> Home</a>
             <a href="www.churchofjesus.org"> Church of Jesus Christ</a>
             <a href="churchofjesuschrist.org/temples"> Temples</a>
             <a href="churchofjesuschrist.org/scriptures"> Scriptures</a>
@@ -19,7 +19,7 @@
         <h1>Brigham Young University Idaho</h1><br>
         <img src="https://www.byui.edu/images/service-sites/map-banner.jpg"
         alt="BYUI CAMPUS"/>
-        <p>BYU-IDAHO is a comfortable place to learn and grow as a disciple of jesus christ because students, faculty, and employees share commitment to live the gosple.</p>
+        <p class='main-para'> BYU-IDAHO is a comfortable place to learn and grow as a disciple of jesus christ because students, faculty, and employees share commitment to live the gosple.</p>
     </main>
     <footer>
         <p>My Web Page 2023 &copy</p>
